--- a/sass/init/_variables.scss
+++ b/sass/init/_variables.scss
@@ -39,6 +39,9 @@ $font-size: (
   xs:               10px
 );
 
+// Output a horizontal grid to help with debugging typography.
+$typey-debug: false;
+
 // The length unit in which to output font size and margin values.
 // Supported values: px, em, rem.
 $base-unit:         'rem';
